error page bad id, fix color stars,text visibility

--- a/src/Pages/ApartmentPage.sass
+++ b/src/Pages/ApartmentPage.sass
@@ -1,5 +1,4 @@
 .apartment-page
-    color: #FF6060
     div:first-child
         margin-bottom: 1rem
 
