--- a/src/components/Apartment.sass
+++ b/src/components/Apartment.sass
@@ -10,6 +10,7 @@
         object-fit: cover
         border-radius: 0.5rem
         overflow: hidden
+
     a
         text-decoration: none
 
@@ -24,4 +25,4 @@
     color: white
     position: absolute
     font-weight: bold
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3)
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6), 0px 0px 8px rgba(0, 0, 0, 0.5)
