--- a/src/components/ApartmentHeader.sass
+++ b/src/components/ApartmentHeader.sass
@@ -1,4 +1,5 @@
 .apartment__header
+    color: #FF6060
     display: flex
     @media screen and (min-width: 768px)
         padding-inline: 80px
@@ -21,12 +22,11 @@
         display: flex
         gap: 0.2 rem
         align-items: center
-        *
-            font-size: 2rem
-            .on
-                color: #FF6060
-            .off
-                color: grey
+        font-size: 2rem
+        .on
+            color: #FF6060
+        .off
+            color: #E3E3E3
     .apartment__owner__badge img
         height: 50px
         width: 50px
