--- a/src/components/Main.sass
+++ b/src/components/Main.sass
@@ -2,6 +2,14 @@
     padding-inline: 6rem
     margin-bottom: 3rem
 
-    @media (max-width: 768px)
+    @media screen and (max-width: 768px)
         padding-inline: 1rem
         margin-bottom: 2rem
+    @media screen and (min-width: 1450px)
+        padding-inline: 14rem
+    @media screen and (min-width: 1800px)
+        padding-inline: 15%
+    @media screen and (min-width: 2100px)
+        padding-inline: 28rem
+    @media screen and (min-width: 2400px)
+        padding-inline: 24%
